src/activity/activity-book.css
#paymentIframe {
    margin: 0;
    padding: 8px 8px;
    border: none;
    min-height: 370px;
    height: 100%;
    overflow-y: hidden;
    width: 100%;
}

abl-activity-book md-card {
    box-shadow: none !important;
    border: none !important;
    background: transparent;
}

.inputBottomMargin {
    margin-bottom: 42px !important;
}

.transparent {
    background-color: transparent !important;
}

list-item{
    display: block !important;
}

